# careerpath_ai

./: .gitignore  README.md  demo_ui.py  main.py  pyproject.toml  requirements.txt  skill_engineMCP.py  update_pipeline.py
data/: coursera_dataset.csv  coursera_detailed_dataset.csv  coursera_english_dataset.csv  skilllane_dataset.csv
modules/: coursera_fetch.py  datacamp_fetch.py  debug_db.py  debug_score.py  fetch_courses.py  futureskills_fetch.py  jenkiskhan_fetch.py  khan_fetch.py  skill_engine.py  test.ipynb  vector_manager.py
src/: config.py
src/careerpath_ai/: config.py
src/careerpath_ai/engine/: skill_engine.py  vector_manager.py
src/careerpath_ai/ingestion/: datacamp_fetch.py
src/careerpath_ai/utils/: logger.py
src/engine/: skill_engine.py  vector_manager.py
src/utils/: inspect_db.py  logger.py
user_feedback_logs/: dataset1.csv
